@@ -1,3 +1,7 @@
+2009-08-02  Miguel Sofer  <msofer@users.sf.net>
+
+	* tests/coroutine.test: fix testfile cleanup
+
 2009-08-02  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclObj.c (Tcl_RepresentationCmd): Added an unsupported
